// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[ atoms / Avatar ] #Avatar when 'Avatar' Default is mounted should render 1`] = `
<DocumentFragment>
  <div
    class="avatar"
  >
    <picture
      class="picture is-rounded with-border"
    >
      <img
        src="https://picsum.photos/id/1027/200/200"
        style="height: 44px; max-width: 44px;"
      />
    </picture>
  </div>
</DocumentFragment>
`;

exports[`[ atoms / Avatar ] #Avatar when 'Avatar' Sizes is mounted should render 1`] = `
<DocumentFragment>
  <div
    class="avatar"
  >
    <picture
      class="picture is-rounded with-border"
    >
      <img
        src="https://picsum.photos/id/1027/200/200"
        style="height: 22px; max-width: 22px;"
      />
    </picture>
  </div>
  <div
    class="avatar"
  >
    <picture
      class="picture is-rounded with-border"
    >
      <img
        src="https://picsum.photos/id/1027/200/200"
        style="height: 44px; max-width: 44px;"
      />
    </picture>
  </div>
  <div
    class="avatar"
  >
    <picture
      class="picture is-rounded with-border"
    >
      <img
        src="https://picsum.photos/id/1027/200/200"
        style="height: 66px; max-width: 66px;"
      />
    </picture>
  </div>
</DocumentFragment>
`;
